rdservices/base/ing-describo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/instance: customerrds
  name: describo-ingress
spec:
  defaultBackend:
    service:
      name: layer0-describo
      port:
        number: 80
  rules:
    - host: describo-sunet.drive.test.sunet.se
      http:
        paths:
          - backend:
              service:
                name: layer0-describo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - describo-sunet.drive.test.sunet.se
      secretName: tls-secret
